refactor : inbox 개별 save 처리를 saveAll로 변경